fix: Use primary button when no color for provider
When an OIDC provider does not have a color, then the button appears
broken on the login page (the button is half styled).

Now if no color, the button is primary (consistency with other primary
buttons on the page). This is usefull when the OIDC is the only way to
connect to the platform and the button is unique on the page.

The benefit is that we can provide Tuleap orange buttons on our default
platforms (tuleap.net, tuleap-devel, …) instead of a Clokcwork orange.

Note: Clockwork orange is not changed to Tuleap orange because users of
TLP Swatch Colors should not be impacted by Tuleap rebranding.
Furthermore it would imply to adjust other colors to bring harmony that
would be broken by changing existing orange (the new orange has a more
reddish hue).
Likewise, we cannot add Tuleap orange to the TLP Swatch Colors: it will
produce a even numbered palette, and some colors have 3 variations, why
orange would have 4 variations?

Part of story #45211: Tuleap 17.0 new theme

--- a/plugins/openidconnectclient/themes/BurningParrot/css/includes/_provider-admin-modal.scss
+++ b/plugins/openidconnectclient/themes/BurningParrot/css/includes/_provider-admin-modal.scss
@@ -42,6 +42,11 @@
     display: block;
     height: 25px;
     border-radius: 3px;
+
+    &.provider-color-selector-default {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .provider-admin-modal-name-container {
@@ -58,9 +63,12 @@
     margin: 0 0 var(--tlp-medium-spacing) calc(var(--tlp-medium-spacing) * 2);
 }
 
-.provider-icon-selector,
-.provider-color-selector {
+.provider-icon-selector {
     width: 80px;
+}
+
+.provider-color-selector {
+    width: 100px;
 }
 
 .provider-icon-results {
@@ -116,6 +124,16 @@
     span {
         @extend %color-area;
     }
+}
+
+/* stylelint-disable-next-line selector-class-pattern,selector-no-qualifying-type */
+span.select2-container--tlp-select2
+    .select2-dropdown
+    /* stylelint-disable-next-line selector-class-pattern */
+    .select2-results__option[aria-selected="true"]::before {
+    // magic value for better alignment of check mark
+    // (6px of margin + half of span 25px - half of icon 12px)
+    top: 12px;
 }
 
 .provider-admin-modal-userinfo-endpoint-container {
